--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +35,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="background: linear-gradient(to bottom, rgb(92, 135, 228), rgb(220, 221, 228)); height: 100vh;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
