--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -33,6 +37,9 @@
     -->
     <title>React App</title>
     <style>
+      h1,h2{
+        color: aliceblue;
+      }
       table {
         background-color: white;
         color: black;
@@ -95,7 +102,7 @@
       }
 
       body {
-        background: linear-gradient(299deg, #d000ff, #ab00ff, #7300ff);
+        background: linear-gradient(299deg, #d000ff, #ab00ff, #680876);
         background-size: 600% 600%;
 
         -webkit-animation: AnimationName 10s ease infinite;
@@ -138,7 +145,7 @@
     </style>
   </head>
 
-  <body>
+  <body style="font-family: 'Poppins'">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
